# fastapi_examples

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  Makefile  alembic.ini  docker-compose-db.yml  docker-compose-dev.yml  docker-compose.yml  example.env  pyproject.toml  run.py
app/: config.py  main.py
app/auth/: auth.py  database.py  manager.py  schemas.py
app/migrations/: env.py
app/migrations/versions/: e1e7f1709b42_initial_database_users_roles.py  fad360a2814e_.py
app/models/: models.py
docker/: app.sh
migrations/: env.py
migrations/versions/: 003196cc43ef_.py  184799bda145_.py  2023_09_17_1638-287e66bdd558_.py  2023_09_22_1312-f26deb1e3cf4_.py  20b0cf1edec7_added_operation_models.py  5658c0124f56_.py  5a2ecf30ba2c_.py  60ca5c7828a7_.py  c9b127156cef_.py  f01af8fa386c_.py
scripts/: app.sh
src/: config.py  database.py  main.py
src/admin/: admin.py  auth.py
src/auth/: admin.py  auth.py  dal.py  dependencies.py  exceptions.py  initialization.py  manager.py  models.py  router.py  services.py  utils.py
src/database/: dal.py  db.py
src/operations/: models.py  router.py  schemas.py
src/tasks/: router.py  tasks.py
src/users/: admin.py  auth.py  dal.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  services.py
src/users/admin/: schemas.py  views.py
tests/: conftest.py  utils.py
tests/integration_tests/users_tests/: test_api.py
tests/mocks/: mock_users.json
tests/unit_tests/auth_tests/: test_jwt.py
tests/unit_tests/users_tests/: test_api.py  test_dal.py
