[tool.poetry]
name = "fastapi-examples"
version = "0.1.0"
description = ""
authors = ["andrymyzik <andrymyzik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.103.0"}
sqlalchemy = "^2.0.20"
alembic = "^1.11.3"
asyncpg = "^0.28.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.2"}
gunicorn = "^21.2.0"
fastapi-cache2 = "^0.2.1"
redis = "^5.0.0"
celery = "^5.3.4"
flower = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
