[tool.poetry]
name = "fastapi-examples"
version = "0.1.0"
description = ""
authors = ["andrymyzik <andrymyzik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.103.0"}
sqlalchemy = "^2.0.20"
alembic = "^1.11.3"
asyncpg = "^0.28.0"
gunicorn = "^21.2.0"
fastapi-cache2 = "^0.2.1"
redis = "^5.0.0"
celery = "^5.3.4"
flower = "^2.0.1"
passlib = "^1.7.4"
python-jose = "^3.3.0"
bcrypt = "^4.0.1"
starlette-admin = "^0.11.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [".", "src"]
asyncio_mode = "auto"